fix: fixed layout mobile overflow

--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,6 @@ body {
 
 * {
   box-sizing: border-box;
-  max-width: 100%;
 }
 
 #root {
